# lexi-cursor

./: .gitignore  README.md  lexicursor.py  main.log.1  pyproject.toml  requirements.txt  search.log.1  tmp.py
data/: default_options.json  options.json
data/html/: home.html  result.html
scr/: dict.py  logger.py  search.py  settings.py
src/: dict.py  html.py  listener.py  logger.py  options.py  search.py  settings.py  tools.py
tmp/: z_hi.spx  z_test.spx
